# 3commas-ftx-triggers

./: .gitignore  3commas-ftx-triggers.service  Py3c_create.py  Py3c_triggers.py  Py3c_update.py  README.md  example.config.py  requirements.txt  setup.cfg  setup.py  setup.sh
