[metadata]
name = 3command-ftx-triggers
version = 0.0.1
author = nickpagz 
author_email = freqtrade@protonmail.com
description = Python script to send buy and sell triggers to 3Commas trading bots setup to trade FTX perpetual futures 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickpagz/3commas-ftx-triggers
project_urls =
    Bug Tracker = https://github.com/nickpagz/3commas-ftx-triggers/issues
license = TBD
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS
    Operating System :: Unix
    Topic :: Office/Business :: Financial :: Investment


[options]
zip_safe = False
include_package_data = True
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock

packages = find:
python_requires = >=3.6

